overlays/magi/shared/routes/immich-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: https
  hostnames:
    - photos.vbalex.com
  rules:
    - backendRefs:
        - name: immich
          port: 2283
