overlays/magi/shared/routes/llamacpp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llamacpp
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: https
  hostnames:
    - llm.vbalex.com
  rules:
    - backendRefs:
        - name: llamacpp
          port: 8080
