overlays/magi/shared/routes/vaultwarden-http-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-http-redirect
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: http
  hostnames:
    - vault.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
