overlays/magi/shared/routes/vaultwarden-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: https
  hostnames:
    - vault.vbalex.com
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
